--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ header {
     #menu-toggle~.menu li {
         height: 0;
         margin: 0;
-        padding: 0.5rem 0 0 0;
+        padding: 0;
         border: 0;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
@@ -158,14 +158,14 @@ header {
         border-top: 1px solid #fff;
         height: 2.5em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-
+        padding-top: 0.5rem;
     }
 
     .menu>li {
         display: flex;
         justify-content: center;
         margin: 0;
-        padding: 0.5em 0;
+        padding: 0;
         width: 100%;
         color: #fafafa;
         background-color: #5d3c96;
