--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,7 +466,7 @@ hr {
     padding: 10px 20px 10px 20px;
     text-align: center;
     font-size: 100%;
-    
+    background-color: #5d3c96;
     color: #fafafa;
     display: block;
 }
