--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 header {
-    background-color: #5d3c96;
+    background-color: rgba(79, 196, 207, 0.5);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +46,7 @@ header {
 }
 
 .menu li a {
-    color: #fafafa;
+    color: #5d3c96;
     text-decoration: none;
     font-size: x-large;
 }
@@ -88,7 +88,7 @@ header {
 .menu-button::before,
 .menu-button::after {
     display: block;
-    background-color: #fff;
+    background-color: #5d3c96;
     position: absolute;
     height: 4px;
     width: 30px;
@@ -112,7 +112,7 @@ header {
 }
 
 #menu-toggle:checked+.menu-button-container .menu-button {
-    background: #5d3c96;
+    background: #ffffff;
 }
 
 #menu-toggle:checked+.menu-button-container .menu-button::after {
@@ -123,7 +123,7 @@ header {
 @media (max-width: 800px) {
 
     .active {
-        border-bottom: 1px solid #5d3c96;
+        border-bottom: 1px solid #fff;
         margin-bottom: 8px;
     }
 
@@ -169,6 +169,12 @@ header {
 
     .menu>li:not(:last-child) {
         border-bottom: 1px solid #4fc4cf;
+    }
+
+    .menu li a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: x-large;
     }
 
     .logo {
