--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 header {
-    background-color: rgba(79, 196, 207, 0.5);
+    background-color: rgba(79, 196, 207, 1);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -124,21 +124,19 @@ header {
 
 .dropbtn {
     display: inline-block;
-    color: white;
+    color: #fff;
     text-align: center;
     text-decoration: none;
     cursor: pointer;
 }
 
 .dropdown-content:nth-child(2) {
-    background-color: rgba(79, 196, 207, 1);
     font-size: 50%;
     color: #fff;
 }
 
 .dropdown-content:nth-child(2) a {
-    
-    background-color: white;
+    background-color: #fff;
 }
 
 li.dropdown {
@@ -148,7 +146,6 @@ li.dropdown {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #5d3c96;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;    
@@ -161,16 +158,14 @@ li.dropdown {
     text-decoration: none;
     display: block;
     text-align: left;
-    font-size: 20%;
 }
 
 .dropdown-content a:hover {
-    background-color: red;
+    background-color: rgba(79, 196, 207, 1);
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
-
 }
 
 @media (max-width: 800px) {
@@ -224,7 +219,7 @@ li.dropdown {
 
     .dropdown div {
         margin-top: 40px;
-        background-color: #4fc4cf;
+        
         z-index: 5;
         width: 100%;
     }
@@ -236,7 +231,7 @@ li.dropdown {
         padding: 0;
         width: 100%;
         color: #fafafa;
-        background-color: #4fc4cf;
+        background-color: rgba(79, 196, 207, 1);
     }
 
     .menu>li:not(:last-child) {
