--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,8 @@ header {
     margin: 10px 0 0 10px;
 }
 
+/* Navbar*/
+
 .menu li a {
     color: #5d3c96;
     text-decoration: none;
@@ -112,7 +114,7 @@ header {
 }
 
 #menu-toggle:checked+.menu-button-container .menu-button {
-    background: #ffffff;
+    background: #4fc4cf;
 }
 
 #menu-toggle:checked+.menu-button-container .menu-button::after {
@@ -148,7 +150,7 @@ li.dropdown {
     position: absolute;
     min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;    
+    z-index: 1;
     overflow: auto;
 }
 
@@ -215,12 +217,10 @@ li.dropdown {
 
     .dropdown-content a {
         text-align: center;
-    }    
+    }
 
     .dropdown div {
         margin-top: 40px;
-        
-        z-index: 5;
         width: 100%;
     }
 
@@ -239,7 +239,7 @@ li.dropdown {
     }
 
     .menu li a {
-        
+
         text-decoration: none;
         font-size: x-large;
     }
