--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ li.dropdown {
 @media (max-width: 800px) {
 
     .active {
-        border-bottom: 1px solid #fff;
+        border-bottom: 1px solid #5d3c96;
         margin-bottom: 8px;
     }
 
@@ -209,7 +209,7 @@ li.dropdown {
     }
 
     #menu-toggle:checked~.menu li {
-        border-top: 1px solid #fff;
+        border-top: 1px solid #5d3c96;
         height: 2.5em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
         padding-top: 0.5rem;
@@ -217,6 +217,7 @@ li.dropdown {
 
     .dropdown-content a {
         text-align: center;
+        border-top: 1px solid #5d3c96;
     }
 
     .dropdown div {
@@ -239,7 +240,6 @@ li.dropdown {
     }
 
     .menu li a {
-
         text-decoration: none;
         font-size: x-large;
     }
