Fix issue with footer position. Fix issue to wbody width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,8 +15,10 @@ body {
     font-weight: 500;
     color: #616161;
     min-height: 100%;
-    width: 1800px;
+    max-width: 1800px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 /* headings and logo */
@@ -638,6 +640,7 @@ footer {
     color: #fafafa;
     display: flex;
     flex-direction: column;
+    margin-top: auto;
 }
 
 .footer-container {
