--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ li.dropdown {
 .image-left img {
     width: 100%;
     height: auto;
-    border-radius: 0 30%;
+    border-radius: 1rem;
 }
 
 .right-about {
@@ -286,12 +286,12 @@ li.dropdown {
     margin: auto 30px;
     font-size: 150%;
     font-weight: 500;
-    text-align: center;
+    text-align: left;
     box-sizing: border-box;
 }
 
 .right-about p {
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
 }
 
@@ -316,6 +316,7 @@ hr {
 
 .services-container h2 {
     font-size: 150%;
+    margin-bottom: 20px;
 }
 
 .services-top-2 h4 {
@@ -327,46 +328,52 @@ hr {
     margin-top: 15px;
 }
 
-.services-top-1 {
-    margin: 20px;
+.services-top {
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    order: 1;
 }
 
 .services-top-2 {
-    margin: 20px;
-    flex: 1;
-    order: 3;
+    margin-top: auto;
 }
 
 .services-top-2 ul {
     padding-left: 20px;
 }
 
-.services-image {
-    order: 2;
-    margin: 20px 15px;
+.services-image-top {
     display: flex;
+    flex: 2;    
 }
 
-.services-image img {
-    width: 100%;
-    max-width: 80%;
-    height: auto;
-    border-radius: 0 50%;
+.services-image-top img {    
     margin: auto;
+    border-radius: 1rem;      
 }
 
-.services-bottom-1 {
-    margin: 20px;
+.services-bottom {
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    order: 1;
+    order: 2;
 }
 
 .services-bottom-2 {
-    margin: 20px;
-    flex: 1;
-    order: 3;
+    margin-top: auto;
+}
+
+.services-image-bottom {
+    order: 1;
+    margin: 20px 15px;
+    display: flex;
+    flex: 2;
+}
+
+.services-image-bottom img {
+    margin: auto;
+    border-radius: 1rem;
+    
 }
 
 /* Services pages*/
@@ -403,7 +410,7 @@ hr {
 
 .therapy img {
     height: auto;
-    border-radius: 0 30%;
+    border-radius: 1rem;
 }
 
 .parental-image {
@@ -736,7 +743,17 @@ footer a {
         font-size: 80%;
     }
 
-    .services-image,
+    .services {
+        margin: 20px;
+    }
+
+    .services-top-1,
+    .services-bottom-1 {
+        margin-bottom: 20px;
+    }
+
+    .services-image-bottom,
+    .services-image-top,
     .image-left,
     .therapy-image {
         max-width: 90%;
@@ -744,8 +761,11 @@ footer a {
         padding: 15px 0;
     }
 
+    .services-image-top img,
+    .services-image-bottom img,
     .therapy-image img {
         width: 100%;
+        height: auto;
     }
 
     .our-team-inner {
