--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ li.dropdown {
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
         padding-top: 0.5rem;
     }
-    
+
     #menu-button-rm {
         display: none;
     }
@@ -276,8 +276,7 @@ li.dropdown {
 }
 
 .image-left img {
-    width: 100%;
-    height: auto;
+
     border-radius: 1rem;
 }
 
@@ -310,8 +309,7 @@ hr {
 
 .services {
     display: flex;
-    margin: 20px 0;
-    text-align: left;
+    margin: 20px;
 }
 
 .services-container h2 {
@@ -344,12 +342,13 @@ hr {
 
 .services-image-top {
     display: flex;
-    flex: 2;    
+    flex: 2;
+    margin-left: 20px;
 }
 
-.services-image-top img {    
+.services-image-top img {
     margin: auto;
-    border-radius: 1rem;      
+    border-radius: 1rem;
 }
 
 .services-bottom {
@@ -365,7 +364,7 @@ hr {
 
 .services-image-bottom {
     order: 1;
-    margin: 20px 15px;
+    margin-right: 20px;
     display: flex;
     flex: 2;
 }
@@ -373,7 +372,7 @@ hr {
 .services-image-bottom img {
     margin: auto;
     border-radius: 1rem;
-    
+
 }
 
 /* Services pages*/
@@ -842,16 +841,32 @@ footer a {
         margin-right: 10px;
     }
 
-    .services-image {
-        max-width: 300px;
-        margin-bottom: auto;
-        padding: 15px 0;
+    .services-bottom,
+    .services-top {
+        flex: 3;
     }
-}
 
-@media screen and (min-width:2000px) {
+
+    .services-image-top img,
+    .services-image-bottom img {
+        max-width: 100%;
+        height: auto
+    }
 
     .image-left img {
-        max-width: 60%;
+        max-width: 100%;
+        height: auto;
     }
+
+    .right-about {
+        flex: 1;
+    }
+
+    .services-top-1,
+    .services-bottom-1 {
+        margin-bottom: 20px;
+    }
+
 }
+
+@media screen and (min-width:2000px) {}
