--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -456,7 +456,6 @@ hr {
 }
 
 .our-team-bg {
-    background-color: rgba(79, 196, 207, 0.4);
     height: 100%;
     width: 70%;
     padding: 10px;
@@ -494,21 +493,25 @@ hr {
 }
 
 .our-team-1 {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
     border-radius: 1.5rem 1.5rem 0 1.5rem;
     margin-left: auto;
 }
 
 .our-team-2 {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
     border-radius: 1.5rem 1.5rem 1.5rem 0;
     margin-right: auto;
 }
 
 .our-team-3 {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
     border-radius: 1.5rem 0 1.5rem 1.5rem;
     margin-left: auto;
 }
 
 .our-team-4 {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
     border-radius: 0 1.5rem 1.5rem 1.5rem;
     margin-right: auto;
 }
