--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -852,6 +852,7 @@ footer a {
     .form-container {
         width: 100%;
         margin: 0;
+        border-radius: 0;
     }
 
     .form-container-mid {
